PDSW-66: Fix datalist styling to remove gap and don't disturb page layout

--- a/src/Resources/app/storefront/src/scss/main.scss
+++ b/src/Resources/app/storefront/src/scss/main.scss
@@ -1,5 +1,6 @@
 .datalist {
-    position: relative;
+    position: absolute;
+    top: auto !important;
     z-index: 100;
     list-style: none;
     background: white;
